<resources>
    <string name="app_name">Zed Tourer</string>
    <string name="no_image">No Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_get_started">GET STARTED</string>
    <string name="str_skip">SKIP</string>
    <string name="str_account_verified">Your account has been verified successfully</string>
    <string name="str_search">Search</string>
    <string name="str_sales">Sales</string>
    <string name="str_customers">Customers</string>
    <string name="str_products_services">Products &amp; Services</string>
    <string name="str_cashiers">Cashiers</string>
    <string name="str_business_profile">Business Profile</string>
    <string name="str_settings">Settings</string>
    <string name="str_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_deposit_request">Please confirm deposit on your device</string>
    <string name="str_finish">Finish</string>
    <string name="str_bills">Bills</string>
    <string name="str_customer_name">Hope Mutale</string>
    <string name="str_customer_number">0962033348</string>
    <string name="str_invoice_code">Invoice Code</string>
    <string name="str_make_payment">Make Payment</string>
    <string name="str_complete">COMPLETE</string>
    <string name="str_pending">PENDING</string>
    <string name="str_success">Success!</string>
    <string name="str_order_success">Your order has been placed. You can pay for the order once it has been accepted.</string>
    <string name="str_cashier_title">Cashier</string>
    <string name="str_cashier_name">Jennifer Mwanza</string>
    <string name="str_cashier_number">0700118233</string>
    <string name="str_title_orders">Total Orders</string>
    <string name="str_orders_number">0</string>
    <string name="str_title_payments">Payments</string>
    <string name="str_payments_amount">ZMW 1,740</string>
    <string name="str_cashier_address">Plot 0784, Northmead, Lusaka</string>
    <string name="str_customer_address">House No.988, Kabulonga, Lusaka</string>
    <string name="str_business_name">Zed Tourer</string>
    <string name="str_business_website">www.zedtourer.com</string>
    <string name="str_business_owner_name">Jackson Mwila</string>
    <string name="str_business_owner_phone">0700899284</string>
    <string name="str_location">Lusaka</string>
    <string name="str_business_owner">Business Owner</string>
    <string name="str_title_business_details">Business Details</string>
    <string name="str_title_business_name">Business Name</string>
    <string name="str_title_business_owner_name">Owner Name</string>
    <string name="str_title_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="str_title_phone">Phone</string>

    <string name="str_business_address">Room 45, Suite T, Levy Complex, Lusaka</string>

    <string name="str_full_names">Full Names</string>
    <string name="str_title_coordinates">Location Coordinates</string>
    <string name="str_title_open_map">OPEN MAP</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="str_default_coordinates">-15.390113, 28.322519</string>
    <string name="str_title_customer_names">Customer Names</string>
    <string name="str_blank_cashiers">There are no cashiers available at this time. \nTap the add icon at the bottom to add a cashier</string>
    <string name="str_title_sort">Sort</string>
    <string name="str_title_delete_account">Delete Account</string>
    <string name="str_title_gender">Gender</string>
    <string name="str_gender">Select Gender</string>
    <string name="str_title_login_failed">Login Failed</string>
    <string name="str_msg_login_failed">Check your number or password</string>
    <string name="confirm_account">Confirm Account</string>
    <string name="account_confirmation">Account Confirmation</string>
    <string name="cashier_new_password">Enter a new password here</string>
    <string name="cashier_number">Registered number</string>
    <string name="nature_of_business">Nature of Business</string>


</resources>