<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_xlarge"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_xlarge">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilBusinessName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tieBusinessName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/str_title_business_name"
                            android:inputType="textCapCharacters"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                            android:textColor="@color/black"
                            android:textColorHint="@color/colorPrimaryDark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:layout_marginBottom="@dimen/spacing_middle"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/spacing_medium"
                            android:paddingRight="@dimen/spacing_medium"
                            android:text="@string/str_products_services"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/zed_light" />

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/cgProductCategories"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            app:singleSelection="false">

                        </com.google.android.material.chip.ChipGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:layout_marginBottom="@dimen/spacing_middle"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/spacing_medium"
                            android:paddingRight="@dimen/spacing_medium"
                            android:text="@string/str_title_coordinates"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/zed_light" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/spacing_medium"
                            android:paddingRight="@dimen/spacing_medium"
                            android:text="@string/str_default_coordinates"/>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_large"
                            android:gravity="left"
                            android:orientation="horizontal">
                            <Button
                                android:id="@+id/bOpenMap"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/str_title_open_map"
                                 />
                        </LinearLayout>


                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilOwnerName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tieOwnerName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/str_title_business_owner_name"
                            android:inputType="textCapCharacters"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                            android:textColor="@color/black"
                            android:textColorHint="@color/colorPrimaryDark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPhone"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiePhone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/str_title_phone"
                            android:inputType="textCapCharacters"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                            android:textColor="@color/black"
                            android:textColorHint="@color/colorPrimaryDark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilConfirmPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tieConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/str_title_password"
                            android:inputType="textCapCharacters"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                            android:textColor="@color/black"
                            android:textColorHint="@color/colorPrimaryDark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiePassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/confirm_password"
                            android:inputType="textCapCharacters"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                            android:textColor="@color/black"
                            android:textColorHint="@color/colorPrimaryDark" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/bRegisterBusiness"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:background="@drawable/btn_rounded_accent"
                        android:text="REGISTER"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
